Deploy presell for prostabliss

--- a/prostabliss/index.html
+++ b/prostabliss/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Get yours now and enjoy fast shipping, secure payment, and easy returns. High quality product with great value. Shop now and upgrade your life
+  <meta name="description" content="Get yours now and experience the difference Enhance your daily life with this product Enjoy free shipping and easy returns Order today
 " />
   <meta name="keywords" content="ProstaBliss" />
   <meta name="robots" content="noindex, nofollow">
@@ -147,7 +147,15 @@
       gap: .6rem;
     }
   </style>
-  <script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11063595228"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11063595228');
+</script><script>
     function click() {
       document.getElementById("goToPage").click();
     }
